--- a/Android/Carduino/app/src/main/res/layout/activity_sensor.xml
+++ b/Android/Carduino/app/src/main/res/layout/activity_sensor.xml
@@ -16,32 +16,25 @@
     <requestFocus
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="200dp"
+        android:max="1024"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="X"
-        android:id="@+id/xOut"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Y"
-        android:id="@+id/yOut"
+        android:rotation="270"
+        android:id="@+id/verticalProgressBar"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:indeterminate="false" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="200dp"
+        android:max="1024"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Z"
-        android:id="@+id/zOut"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/horizontalProgressBar"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:indeterminate="false" />
 
 </RelativeLayout>
