--- a/Android/Carduino/app/src/main/res/layout/activity_sensor.xml
+++ b/Android/Carduino/app/src/main/res/layout/activity_sensor.xml
@@ -44,4 +44,13 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="STBY"
+        android:id="@+id/stbySwitch"
+        android:checked="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
